
     added getAbsoluteClippingRect, returns the visible area of an element.

 - Added IGUISpinBox, by Michael Zeilfelder (CuteAlien).

 - IGUIEditBox new methods:
   setWordWrap/isWordWrapEnabled, to split words on to the next line.
   setMultiLine and isMultiLineEnabled, inserts a newline instead of sending
   EGET_EDITBOX_ENTER events.
   setTextAlignment, to align the text to left, right, top, bottom and centers
   setAutoScroll, to enable and disable automatic scrolling with the cursor

 - IGUIStaticText new methods setDrawBorder and setTextAlignment.

 - IGUIListBox changes:
   Added setAutoScrollEnabled and isAutoScrollEnabled, for automatic scrolling 
   when selecting or adding an item. 
   Scrollbars are now only visible when the list doesn't fit in the visible area.
   You can now type an item's text to select it.


Changes in version 1.3.1 (20 Jun 2007)

 - Fixed a bug with negative exponents in fast_atof, posted by RVL

 - renamed IAnimatedMeshSceneNode::getAbsoluteTransformation to
   getMD3TagTransformation to avoid conflicts with
   ISceneNode::getAbsoluteTransformation

 - Added rect::constrainTo for locking a rectangle inside another without
   resizing it

 - Moved the OpenGL API functions from COpenGL driver into new extension
   handler. Thereby, some renaming took place - the ARB and EXT suffix was
   removed. Simply rename the functions in case you use them.

 - matrix4 is now a template internally such that also int and double matrices
   are possible now.

 - CMeshBuffer is a new template replacing all previous SMeshBuffer* classes.
   New mesh buffers can be easily implemented based on this code.

 - Ogre 1.40 files now also load.

 - New filename based methods in the MeshCache.

 - CSphereSceneNode is now texture wrapped with sphere mapping by exactly one
   texture. Only a small error on the top remained.
   
 - The Sky box scene node now clamps its textures now by default (meaning no
   more ugly artifacts at the borders).
